# myapp_a

./: .gitignore  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
crates/market-data/: Cargo.toml
crates/market-data/src/: lib.rs
rust-api/: Cargo.toml
rust-api/src/: main.rs
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: api.js  strategy.js
