[package]
name = "fundpilot-api"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
market-data = { path = "../crates/market-data" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
