[package]
name = "fundpilot-desktop"
version = "1.0.0"
description = "FundPilot fund strategy desktop client"
edition = "2024"

[lib]
name = "fundpilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fundpilot-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
market-data = { path = "../crates/market-data" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync"] }
