[package]
name = "market-data"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync"] }
